Se muestra fecha de completado/rechazado en show de hito y en timeline

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,6 +159,8 @@ en:
     event: "event"
     last_update: "Edited"
     author: "Author"
+    done_date: "Done on: "
+    rejected_date: "Rejected on: "
 
     state:
       done_or_rejected: 'milestones in state done or rejected'
