--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -182,6 +182,8 @@ es:
     event: "evento"
     last_update: "Modificado"
     author: "Autor"
+    done_date: "Completado el día: "
+    rejected_date: "Rechazado el día: "
 
     state:
       done_or_rejected: 'Hitos en estado hecho o rechazado'
