--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -166,6 +166,9 @@ en:
     done_date: "Done on: "
     rejected_date: "Rejected on: "
 
+    state_title: "State"
+    actions: "Actions"
+
     state:
       done_or_rejected: 'milestones in state done or rejected'
       pending: 'milestones in state pending'
