CRUD tech_roles

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -67,6 +67,10 @@ es:
     create:
       success: "creado con éxito!"
       error: "no se ha podido crear"
+    save:
+      success: "guardado con éxito!"
+      error: "no se ha podido guardar"
+
 
 
   #people
@@ -295,6 +299,20 @@ es:
 
     zero: "No se han encontrado tags"
 
+  tech_roles:
+    index:
+      header: "Listando roles técnicos"
+    new:
+      header: "Crear rol técnico"
+      submit: "Crear"
+    edit:
+      header: "Editar rol técnico"
+      submit: "Editar"
+
+    delete:
+      sure: "¿Está seguro que desea eliminar el rol?"
+
+    zero: "No se han encontrado roles"
 
   attachmentsdocs: 'Documentos adjuntos'
   adddoc: 'Agregar documento'
