CRUD tech roles terminado

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,24 @@
+# Files in the config/locales directory are used for internationalization
+# and are automatically loaded by Rails. If you want to use locales other
+# than English, add the necessary files in this directory.
+#
+# To use the locales, use `I18n.t`:
+#
+#     I18n.t 'hello'
+#
+# In views, this is aliased to just `t`:
+#
+#     <%= t('hello') %>
+#
+# To use a different locale, set it with `I18n.locale`:
+#
+#     I18n.locale = :es
+#
+# This would use the information in config/locales/es.yml.
+#
+# To learn more, please read the Rails Internationalization guide
+# available at http://guides.rubyonrails.org/i18n.html.
+
 en:
 
   #General (Pages, Links, Buttons, etc)
@@ -46,6 +67,12 @@ en:
     create:
       success: "created successfully!"
       error: "couldn't be created"
+    save:
+      success: "successfully saved!"
+      error: "couldn't be saved"
+    delete:
+      success: "successfully deleted!"
+      error: "couldn't be deleted"
 
 
   #people
@@ -268,6 +295,20 @@ en:
 
     zero: "No tags found"
 
+  tech_roles:
+    index:
+      header: "Listing tech roles"
+    new:
+      header: "Create tech role"
+      submit: "Create"
+    edit:
+      header: "Edit tech role"
+      submit: "Edit"
+
+    delete:
+      sure: "Are you sure you wish to delete this role?"
+
+    zero: "No roles found"
 
   attachmentsdocs: 'Attachments documents'
   adddoc: 'Add document'
