--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -150,7 +150,7 @@ en:
     reviewer: "Feedback's reviewer"
     assign_to: 'Assign to'
     cannot_assign: "You cannot assign more people"
-    people: "People associated"
+    people: "Associated People"
     assigned_people: "People associated with the milestone"
     mark_done: 'Mark as done'
     add_feedback_author: 'Add feedback reviewer'
