Arreglo de bugs en dashboard

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -214,6 +214,9 @@ en:
 
     no_tech_role: "No tech role"
 
+    completed:
+          zero: "No done milestones"
+
     new:
       header: "Create Milestone"
       submit: "Create"
