Se crea la vista para la edicion de la imagen y un link a la misma desde la imagen del usuario en su perfil

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -101,6 +101,10 @@ es:
       other_notes: "Ver %{count} notas restantes"
       submit: "Crear"
 
+    edit_picture:
+      header: "Editar imagen de perfil"
+      submit: "Actualizar imagen"
+
   #mentor
   mentor:
     header: "Mentores"
