--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,10 @@ en:
       other_notes: "View %{count} other notes"
       submit: "Create"
 
+    edit_picture:
+      header: "Edit profile image"
+      submit: "Update image"
+
 
   #mentor
   mentor:
