--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -538,3 +538,9 @@ es:
       long: "%d de %B de %Y %H:%M"
       short: "%d de %b %H:%M"
     pm: pm
+
+  events-strings:
+    project:
+      creation:
+        title: 'Se inició el proyecto %{project}'
+        description: 'Se inició el proyecto %{project} para el cliente %{client}'
