--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -100,6 +100,9 @@ es:
       asign_to_project: "Asignar a proyecto"
       other_notes: "Ver %{count} notas restantes"
       submit: "Crear"
+    edit:
+      header: "Editar Usuario"
+      submit: "Editar"
 
   #mentor
   mentor:
