Mejorado el listado de categorías y agregados links a crear, editar y eliminar categoría

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -257,6 +257,7 @@ en:
     updated: "Updated at"
     delete:
       title: "Delete Category"
+      sure: "¿Are you sure you want to delete this category?"
 
     new:
       header: "Create Category"
