--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -261,6 +261,7 @@ es:
     updated: "Actualizado"
     delete:
       title: "Borrar Categoria"
+      sure: "¿Está seguro que desea eliminar esta categoría?"
 
     new:
       header: "Agregar Categoría"
