--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -567,6 +567,10 @@ es:
 
   events-strings:
     project:
-      assign_person:
-        title: '%{name} se unió al proyecto %{project}'
-        description: '%{name} se unió al proyecto %{project} para %{client}'
+      assign_to_project_event:
+        title: "%{person} se unió al proyecto %{project}"
+        description: "%{person} se unió al proyecto %{project} para %{client}"
+    person:
+          change_role_event:
+            title: "%{person} es ahora %{new_role}"
+            description: "%{person} pasó de %{old_role} a %{new_role}"
