--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -48,6 +48,11 @@ es:
   search: 'Buscar'
   none:  'Ninguna'
   view: 'Ver'
+  from: 'desde'
+  to: 'hasta'
+  filters: 'Filtros'
+  all: 'Todos...'
+  reset: 'Limpiar'
 
   common:
     y: 'Sí'
