Se despliega mensaje al agregar una nota

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,6 +75,7 @@ en:
   messages:
     create:
       success: "created successfully!"
+      successf: "created successfully!"
       error: "couldn't be created"
     save:
       success: "successfully saved!"
