Boton ver plantillas y bug de cantidad de hitos en filtros en el perfil

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -199,6 +199,7 @@ en:
     delete:
       title: "Delete Milestone Template"
       sure: "Are you sure you want to permanently delete this milestone template?"
+    see_all: "See all templates"
 
   #milestones
   milestones:
