alfred 54 funcionando sin test

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -134,6 +134,8 @@ en:
     add:
       header: "Add Mentors"
       submit: "Add Mentor"
+    remove:
+      submit: "Remove Mentor"
 
 
   #projects
