Agregado el eliminar categoría

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -303,8 +303,11 @@ en:
 
     new:
       header: "Create Category"
-      sumbit: "Add Category"
+      submit: "Add Category"
       exists: "A category with that name already exists"
+
+    edit:
+      header: "Edit Category"
 
     zero: "There are no available Categories"
 
