--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -298,6 +298,9 @@ es:
     icon: "Icono"
     created: "Creado"
     updated: "Actualizado"
+    doc_url: "URL del Documento"
+    feedback: "Feedback"
+
     delete:
       title: "Borrar Categoria"
       sure: "¿Está seguro que desea eliminar esta categoría?"
