Se cambia mentor por referente

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -128,19 +128,19 @@ es:
 
   #mentor
   mentor:
-    header: "Mentores"
+    header: "Referentes"
     since: "Desde"
-    name: "Nombre del mentor"
-    nomore_msg: "No hay más mentores disponibles para agregar para"
-    adding_to: "Agregando mentor a"
+    name: "Nombre del referente"
+    nomore_msg: "No hay más referentes disponibles para agregar para"
+    adding_to: "Agregando referente a"
 
-    zero: "Sin mentores en la actualidad"
+    zero: "Sin referentes en la actualidad"
 
     add:
-      header: "Agregar Mentores"
-      submit: "Agregar Mentor"
+      header: "Agregar Referentes"
+      submit: "Agregar Referente"
     remove:
-      submit: "Quitar Mentor"
+      submit: "Quitar Referente"
 
 
   #projects
@@ -325,7 +325,7 @@ es:
     add: "Agregar Notas"
     add_placeholder: "Agregar nota..."
     me: "Privado"
-    mentors: "Mentores"
+    mentors: "Referentes"
     every_body: "Publico"
     more: " notas mas"
 
