--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -367,6 +367,7 @@ es:
 
     zero: "No se han encontrado roles"
 
+  tempdoc: 'Documento plantilla'
   attachmentsdocs: 'Documentos adjuntos'
   adddoc: 'Agregar documento'
   driveerrormsj: 'Ha ocurrido un error al adjuntar el documento de drive'
