--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -369,10 +369,14 @@ es:
 
 
   collections:
+    header: 'Colecciones de Plantillas de Hito'
     new:
       header: 'Crear Colección de Plantillas de Hito'
       submit: 'Crear'
-
+    delete:
+      title: "Borrar Colección de Plantillas de Hito"
+      sure: "¿Esta seguro que desea eliminar esta colección de plantillas de hito permanentemente?"
+    see_all: "Ver todas las colecciones de plantillas de hito"
 
   attachmentsdocs: 'Documentos adjuntos'
   adddoc: 'Agregar documento'
