Primer version de formulario para agregar un template

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -371,6 +371,10 @@ en:
     header: 'Milestone Templates Collections'
     new:
       header: 'Create Milestone Templates Collection'
+      templates:
+              template: 'Template'
+              select: 'Select template'
+              days: 'Days after creation'
       submit: 'Create'
     delete:
       title: "Delete Milestone Templates Collection"
