--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -368,6 +368,7 @@ es:
     zero: "No se han encontrado roles"
 
 
+  # Colecciones de templates de hitos
   collections:
     header: 'Colecciones de Plantillas de Hito'
     new:
@@ -377,6 +378,8 @@ es:
         select: 'Seleccione la plantilla'
         days: 'Días desde la creación'
       submit: 'Crear'
+    view: 'Ver Colección de Plantillas de Hito'
+    templates: 'Plantillas de Hito'
     delete:
       title: "Borrar Colección de Plantillas de Hito"
       sure: "¿Esta seguro que desea eliminar esta colección de plantillas de hito permanentemente?"
