--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -237,6 +237,8 @@ es:
     rejected_date: "Rechazado el día: "
     mod_date: "Fecha hecho/ rechazado"
 
+    highlighted: "destacado"
+    not_highlighted: "no destacado"
     state_title: "Estado"
     actions: "Acciones"
 
