--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -374,6 +374,7 @@ es:
 
   tempdoc: 'Documento plantilla'
   attachmentsdocs: 'Documentos adjuntos'
+  nonattachmentsdocs: 'Sin documentos adjuntos'
   adddoc: 'Agregar documento'
   driveerrormsj: 'Ha ocurrido un error al adjuntar el documento de drive'
   notpermissionsdrive: 'Asegúrese de que tiene permisos de acceso al archivo en Google Drive'
