--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -389,6 +389,10 @@ en:
       title: "Delete Milestone Templates Collection"
       sure: "Are you sure you want to permanently delete this milestone templates collection?"
     see_all: "See all milestone templates collections"
+    generate:
+      header: 'Generate Milestones from Templates Collection'
+      submit: 'Generate'
+    select: 'Select collection'
 
 
   tempdoc: 'Template document'
