--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -389,6 +389,10 @@ es:
       title: "Borrar Colección de Plantillas de Hito"
       sure: "¿Esta seguro que desea eliminar esta colección de plantillas de hito permanentemente?"
     see_all: "Ver todas las colecciones de plantillas de hito"
+    generate:
+      header: 'Generar Hitos a partir de Colección de Plantillas'
+      submit: 'Generar'
+    select: 'Seleccionar colección'
 
 
   tempdoc: 'Documento plantilla'
