estetica add templates a collection

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -195,6 +195,8 @@ es:
 
   #plantillas
   templates:
+    addempty: 'Sin plantillas añadidas'
+    add: 'Añadir plantilla'
     generate:
       header: 'Generar Hito a partir de Plantilla'
       submit: 'Generar'
