--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -195,6 +195,8 @@ en:
 
   #templates
   templates:
+    addempty: 'No templates added'
+    add: 'Add template'
     generate:
       header: 'Generate Milestone from Template'
       submit: 'Generate'
