--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -392,6 +392,8 @@ en:
       sure: "Are you sure you want to permanently delete this milestone templates collection?"
     see_all: "See all milestone templates collections"
     generate:
+      success: 'Milestones successfully created'
+      error: "Some milestones couldn't be created"
       header: 'Generate Milestones from Templates Collection'
       submit: 'Generate'
     select: 'Select collection'
