Listado con filtros de hitos pendientes para personas mentoreadas o todas

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -289,8 +289,13 @@ en:
       header: "Mentees"
       zero: "You don't have any mentees"
     milestones:
-      header: "Pending Milestones"
+      header: "My pending milestones"
       zero: "You don't have any pending milestone"
+    review:
+      admin:
+        header: "All pending milestones"
+      mentees:
+        header: "Pending milestones from my mentees"
 
   #categories
   categories:
