--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -193,11 +193,7 @@ es:
     delete:
       sure: "¿Está seguro que desea eliminar este proyecto?"
 
-    checklist:
-      add_checklist: "Agregar Checklist de Objetivos"
-      add_more_items: "Agregar más objetivos"
-      add_to_project: "Agregar al Proyecto"
-      actual_objetives: "Objetivos"
+
 
 
 
@@ -285,6 +281,12 @@ es:
       sure: "¿Esta seguro que desea eliminar este hito permanentemente?"
 
     see_all: "Ver todos los hitos"
+
+    checklist:
+      add_more_items: "Escriba otro objetivo"
+      add_to_milestone: "Agregar al Hito"
+      actual_objetives: "Objetivos Actuales"
+      add_checklist: "Agregar Objetivos"
 
 
 
