--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,12 @@ en:
   icon: 'Icon'
   tags: 'Tags'
   actions: 'Actions'
+  status: 'Status'
+  start_date: 'Start date'
+  due_date: 'Due date'
+  completed_date: 'Done date'
+  created_at: 'Created at'
+  updated_at: 'Updated at'
 
   common:
     y: 'Yes'
@@ -245,6 +251,8 @@ en:
     state:
       done_or_rejected: 'Finalized'
       pending: 'Pending'
+      done: 'Done'
+      rejected: 'Rejected'
     mark_as_sure: 'Are you sure you want to mark the milestone as '
     pendings: "Pending Milestones"
     overcomes: 'Expired milestones'
@@ -255,7 +263,7 @@ en:
     status: "Status"
     assigned: " will be assigned by default"
     assigned_to: "Assigned to this milestone"
-    zero: "No hay hitos que mostrar"
+    zero: "No milestones to show"
 
     no_tech_role: "No tech role"
 
@@ -276,6 +284,7 @@ en:
 
     see_all: "See all milestones"
 
+    download_csv: 'Download CSV'
 
 
   #dashboard
