Agregado el activar categorías

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -320,6 +320,7 @@ en:
     doc_url: "Document URL"
     feedback: "Feedback"
     status: "Status"
+    activate_sure: "¿Are you sure you want to activate this category?"
 
     display_status:
       active: 'Active'
