--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -399,19 +399,25 @@ en:
     zero: "No roles found"
 
   skills:
-      index:
-        header: "Listing skills"
-      new:
-        header: "Create skill"
-        submit: "Create"
-      edit:
-        header: "Edit skill"
-        submit: "Edit"
+    addrm:
+      select: 'seleccionar habilidad'
+      nomore_add: "No more skills available to add to"
+      nomore_remove: "No skills available to remove to"
+      add: "Add Skill"
+      remove: "Remove Skill"
+    index:
+      header: "Listing skills"
+    new:
+      header: "Create skill"
+      submit: "Create"
+    edit:
+      header: "Edit skill"
+      submit: "Edit"
 
-      delete:
-        sure: "Are you sure you wish to delete this skill?"
+    delete:
+      sure: "Are you sure you wish to delete this skill?"
 
-      zero: "No skills found"
+    zero: "No skills found"
 
 
   technologies:
