--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -288,6 +288,9 @@ en:
       title: "Delete Milestone"
       sure: "Are you sure you want to permanently delete this milestone?"
 
+    create:
+      error: "Error creating "
+
     see_all: "See all milestones"
 
     download_csv: 'Download CSV'
@@ -341,6 +344,9 @@ en:
     edit:
       header: "Edit Category"
       submit: "Edit"
+
+    create:
+      zero:  "The category does not exists"
 
     zero: "There are no available Categories"
 
