Se agrega el campo fecha de inicio en la tabla de mis hitos en dashboard

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -302,6 +302,7 @@ en:
     name: "Name"
     description: "Description"
     due_time: "Due date"
+    start_time: "Start date"
     last_completed_milestones: "Latest Milestones Completed"
     mentees:
       header: "Mentees"
